# n2epub

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml
src/: constants.py  download.py  downloader.py  n2epub.py  n2epub.spec  read.py
src/providers/: novel_bin.py
